<resources>
    <string name="app_name">Patani</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prediksi_waktu_panen">Prediksi Waktu Panen</string>
    <string name="lorem">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="jual_lebih_awal">Jual lebih awal</string>
    <string name="bebas_biaya_kirim">Bebas Biaya Kirim</string>
    <string name="masukan_email">Masukan email</string>
    <string name="masukan_password">Masukan password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masukan_nomor_telpon">Masukan nomor telpon</string>
    <string name="konfirmasi_password">Konfirmasi password</string>
    <string name="sayur">Sayur</string>
    <string name="product">Product</string>
    <string name="kategori">Kategori</string>
    <string name="panen_sebentar_lagi">Panen sebentar lagi</string>
    <string name="diskon_50">Diskon 50%</string>
    <string name="panen_dalam_2_minggu">Panen dalam 2 minggu</string>
    <string name="gratis_ongkir">Gratis ongkir</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="qty">0</string>
    <string name="deskripsi_produk">Deskripsi produk</string>
    <string name="beli_sekarang">Beli sekarang</string>
    <string name="keranjang">Keranjang</string>
    <string name="share">Share</string>
    <string name="share_succes">Berhasil bagikan konten</string>
    <string name="pengiriman">Pesanan saya</string>
    <string name="kg">/ kg</string>
    <string name="checkout">Checkout</string>
    <string name="button_add">button_add</string>
    <string name="btn_minus">btn minus</string>
    <string name="btn_plus">btn plus</string>
    <string name="tambah_ke_keranjang">Tambah ke keranjang</string>
    <string name="welcomtext">Terima kasih terlah bergabung bersama kami, mari bantu petani di Indonesia untuk berkembang.</string>
    <string name="registrasi_berhasil">Registrasi Berhasil</string>
    <string name="paymentmet">Pilih metode pembayaran</string>
    <string-array name="satuan">
        <item>Kg</item>
        <item>Kodi</item>
        <item>Box</item>
        <item>Karung</item>
        <item>Kuintal</item>
    </string-array>
</resources>