<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="260dp"
    android:layout_margin="8dp"
    app:strokeWidth="0.5dp"
    app:strokeColor="@color/body_copy"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/card_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/product"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_wortel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prouct_title"
            style="@style/text_xsmal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_img"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:layout_marginStart="4dp"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/sayur"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_img" />

        <TextView
            android:id="@+id/product_price"
            style="@style/text_xsmal_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_img"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/sayur"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prouct_title" />

        <TextView
            android:id="@+id/kg"
            style="@style/text_xsmal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/kg"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/product_price"
            app:layout_constraintStart_toEndOf="@id/product_price"
            app:layout_constraintTop_toTopOf="@+id/product_price" />

        <TextView
            android:id="@+id/supplier"
            style="@style/text_xsmal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sayur"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/black"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@color/body_copy"
            android:progressTint="@color/goldish"
            android:rating="2.5"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>